@@ -25,4 +25,5 @@ with contributions by:
     Nicholas J. Humfrey <njh@ecs.soton.ac.uk>
     Joel Ebel <jbebel@ncsu.edu>
     <jochen2@users.sourceforge.net>
+	Nicholas J Humfrey <njh@ecs.soton.ac.uk>
 
