@@ -1,5 +1,5 @@
 DarkIce live audio streamer, http://darkice.sourceforge.net
-Copyright (c) 2000-2005, Tyrell Hungary, http://tyrell.hu
+Copyright (c) 2000-2006, Tyrell Hungary, http://tyrell.hu
 
 
 Contents
